@@ -1,4 +1,4 @@
-/*	$NetBSD: var.c,v 1.216 2017/11/18 22:34:04 sjg Exp $	*/
+/*	$NetBSD: var.c,v 1.217 2017/12/08 03:36:42 sjg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: var.c,v 1.216 2017/11/18 22:34:04 sjg Exp $";
+static char rcsid[] = "$NetBSD: var.c,v 1.217 2017/12/08 03:36:42 sjg Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)var.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: var.c,v 1.216 2017/11/18 22:34:04 sjg Exp $");
+__RCSID("$NetBSD: var.c,v 1.217 2017/12/08 03:36:42 sjg Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -1063,8 +1063,8 @@ Var_Append(const char *name, const char *val, GNode *ctxt)
     v = VarFind(name, ctxt, (ctxt == VAR_GLOBAL) ? (FIND_CMD|FIND_ENV) : 0);
 
     if (v == NULL) {
-	VarAdd(name, val, ctxt);
-    } else if (!(v->flags & VAR_FROM_CMD)) {
+	Var_Set(name, val, ctxt, 0);
+    } else if (ctxt == VAR_CMD || !(v->flags & VAR_FROM_CMD)) {
 	Buf_AddByte(&v->val, ' ');
 	Buf_AddBytes(&v->val, strlen(val), val);
 
